[tool.poetry]
name = "spectre-defense"
version = "0.1.0"
description = "Defending Against Backdoor Attacks Using Robust Statistics"
authors = ["Jonathan Hayase <jhayase@cs.washington.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.15.2"
torchvision = "^0.21.0"
tqdm = "^4.49.0"
irlbpy = {git = "https://github.com/boonepeter/irlbpy", rev = "pgb"}
typing-extensions = "^4.12.2"
torch = "^2.6.0"
pandas = "^2.2.3"
tensorflow-io-gcs-filesystem = "0.31.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

